--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
 
 					<!-- form -->
 					<div class="contact_form content-box">
-						<form id="cform" method="post">
+						<form action="https://formsubmit.co/erikopinaldo@gmail.com" method="POST">
 							<div class="group-val">
 								<input type="text" name="name" placeholder="Name" />
 							</div>
