--- a/index.html
+++ b/index.html
@@ -188,28 +188,22 @@
 					<div class="skills list content-box">
 						<ul>
 							<li>
-								<div class="name">Website hosting</div>
+								<span class="icon fab fa-js" style="font-size: 2rem;"></span>
 							</li>
 							<li>
-								<div class="name">iOS and android apps</div>
+								<span class="icon fab fa-css3" style="font-size: 2rem;"></span>
 							</li>
 							<li>
-								<div class="name">Create logo design</div>
+								<span class="icon fab fa-html5" style="font-size: 2rem;"></span>
 							</li>
 							<li>
-								<div class="name">Design for print</div>
+								<span class="icon fab fa-react" style="font-size: 2rem;"></span>
 							</li>
 							<li>
-								<div class="name">Modern and mobile-ready</div>
+								<span class="icon fab fa-node-js" style="font-size: 2rem;"></span>
 							</li>
 							<li>
-								<div class="name">Advertising services include</div>
-							</li>
-							<li>
-								<div class="name">Graphics and animations</div>
-							</li>
-							<li>
-								<div class="name">Search engine marketing</div>
+								<span class="icon fab fa-linkedin" style="font-size: 2rem;"></span>
 							</li>
 						</ul>
 					</div>
