--- a/index.html
+++ b/index.html
@@ -131,12 +131,12 @@
 					<div class="vertical-center">
 						<div class="started-content">
 							<h1 class="h-title">
-								Hello, I’m <strong>erik opinaldo</strong>, Full-Stack Developer Based in Toronto.
+								Hello, I'm <strong>Erik Opinaldo</strong>, a full-stack developer Based in Toronto, Canada.
 							</h1>
 							<div class="h-subtitle typing-subtitle">
-								<p>I code cool <strong>websites</strong></p>
-								<p>I develop <strong>mobile apps</strong></p>
-								<p>I love <strong>wordpress</strong></p>
+								<p>I make cool <strong>websites</strong></p>
+								<p>I develop <strong>solutions</strong></p>
+								<p>I love <strong>challenge</strong></p>
 							</div>
 							<span class="typed-subtitle"></span>
 						</div>
