capitalization correction in intro content

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 					<div class="vertical-center">
 						<div class="started-content">
 							<h1 class="h-title">
-								Hello, I'm <strong>Erik Opinaldo</strong>, a full-stack developer Based in Toronto, Canada.
+								Hello, I'm <strong>Erik Opinaldo</strong>, a full-stack developer based in Toronto, Canada.
 							</h1>
 							<div class="h-subtitle typing-subtitle">
 								<p>I make cool <strong>websites</strong></p>
