--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 						<div class="bts">
 							<a href="#" class="btn hover-animated">
 								<span class="circle"></span>
-								<span class="lnk">Download CV</span>
+								<span class="lnk">Download resume</span>
 							</a>
 						</div>
 					</div>
