--- a/index.html
+++ b/index.html
@@ -165,7 +165,13 @@
 
 					<!-- desc -->
 					<div class="desc">
-						<p>Hello! Erik Opinaldo, a full-stack developer from Toronto, Canada. INSERT BLURB HERE.</p>
+						<p><strong>I love creating experiences users won't forget.</strong></p>
+						<p>
+							After spending 5 years providing users with excellent, empathetic software support, I am always thinking about how user experiences can be more delightful and helpful. Working alongside other developers and product managers in this pursuit opened my eyes to how one can approach this goal from the development side of things.
+						</p>
+						<p>
+							I now combine this strong desire to create meaningful experiences and my innate creative passion to build software that hits the mark.
+						</p>
 						<div class="bts">
 							<a href="#" class="btn hover-animated">
 								<span class="circle"></span>
@@ -248,10 +254,7 @@
 										<div class="category">Content</div>
 										<h4>Keyfigurator</h4>
 										<p>
-											I enjoy collecting mechanical keyboards. When it comes to the outward appearance of these keyboards, I have to choose a
-											keyboard case color and the keycap colors/design. To make it easier to visualize what these color combinations might
-											look like before I commit to buying them, I set out to create this visualizer tool. This website features a 2D keyboard
-											that you can modify. You can change the keyboard case and keycap color (you can also change the background canvas
+											I enjoy collecting mechanical keyboards. When it comes to the outward appearance of these keyboards, I have to choose a keyboard case color and the keycap colors/design. To make it easier to visualize what these color combinations might look like before I commit to buying them, I set out to create this visualizer tool. This website features a 2D keyboard that you can modify. You can change the keyboard case and keycap color (you can also change the background canvas
 											color).
 										</p>
 										<a target="_blank" href="https://keyfigurator.fly.dev/" class="btn hover-animated">
@@ -287,9 +290,7 @@
 										<div class="category">Content</div>
 										<h4>Spongebob Meme Slack Bot</h4>
 										<p>
-											This is a bot that can be installed onto Slack workspaces. It is activated with a slash command in the message input
-											field and your choice of input text. The bot then takes your input text (e.g. "This is some text") and sends out
-											converted text (e.g. "tHiS iS SOMe TExT"). <a href="https://knowyourmeme.com/memes/mocking-spongebob">Here</a> is some cultural/historical context for this meme.
+											This is a bot that can be installed onto Slack workspaces. It is activated with a slash command in the message input field and your choice of input text. The bot then takes your input text (e.g. "This is some text") and sends out converted text (e.g. "tHiS iS SOMe TExT"). <a href="https://knowyourmeme.com/memes/mocking-spongebob">Here</a> is some cultural/historical context for this meme.
 										</p>
 										<a target="_blank" href="https://spongebob-meme-slack-bot.netlify.app/" class="btn hover-animated">
 											<span class="circle"></span>
@@ -324,8 +325,7 @@
 										<div class="category">Content</div>
 										<h4>Clickanywhere</h4>
 										<p>
-											It's like Minesweeper, but not really. Click around the page to find the "right spot", and try to do it with the lowest
-											number of clicks possible.
+											It's like Minesweeper, but not really. Click around the page to find the "right spot", and try to do it with the lowest number of clicks possible.
 										</p>
 										<a target="_blank" href="https://clickanywhere.netlify.app/" class="btn hover-animated">
 											<span class="circle"></span>
