added content to keyfigurator blurb

--- a/index.html
+++ b/index.html
@@ -254,8 +254,13 @@
 										<div class="category">Content</div>
 										<h4>Keyfigurator</h4>
 										<p>
-											I enjoy collecting mechanical keyboards. When it comes to the outward appearance of these keyboards, I have to choose a keyboard case color and the keycap colors/design. To make it easier to visualize what these color combinations might look like before I commit to buying them, I set out to create this visualizer tool. This website features a 2D keyboard that you can modify. You can change the keyboard case and keycap color (you can also change the background canvas
-											color).
+											<strong>Tech used: Javascript, Tailwind, Node.js & Express.js</strong>
+										</p>
+										<p>
+											I enjoy collecting mechanical keyboards. When it comes to the outward appearance of these keyboards, I have to choose a keyboard case color and the keycap colors/design. To make it easier to visualize what these color combinations might look like before I commit to buying them, I set out to create this visualizer tool. 
+										</p>
+										<p>
+											This website features a 2D keyboard that you can modify. You can change the keyboard case and keycap color (you can also change the background canvas color).
 										</p>
 										<a target="_blank" href="https://keyfigurator.fly.dev/" class="btn hover-animated">
 											<span class="circle"></span>
