added content to slackbot blurb

--- a/index.html
+++ b/index.html
@@ -295,6 +295,9 @@
 										<div class="category">Content</div>
 										<h4>Spongebob Meme Slack Bot</h4>
 										<p>
+											<strong>Tech used: Javascript, Node.js, Express.js, & Slack APIs</strong>
+										</p>
+										<p>
 											This is a bot that can be installed onto Slack workspaces. It is activated with a slash command in the message input field and your choice of input text. The bot then takes your input text (e.g. "This is some text") and sends out converted text (e.g. "tHiS iS SOMe TExT"). <a href="https://knowyourmeme.com/memes/mocking-spongebob">Here</a> is some cultural/historical context for this meme.
 										</p>
 										<a target="_blank" href="https://spongebob-meme-slack-bot.netlify.app/" class="btn hover-animated">
