added content to clickanywhere blurb

--- a/index.html
+++ b/index.html
@@ -333,6 +333,9 @@
 										<div class="category">Content</div>
 										<h4>Clickanywhere</h4>
 										<p>
+											<strong>Tech used: Javascript, HTML, & CSS</strong>
+										</p>
+										<p>
 											It's like Minesweeper, but not really. Click around the page to find the "right spot", and try to do it with the lowest number of clicks possible.
 										</p>
 										<a target="_blank" href="https://clickanywhere.netlify.app/" class="btn hover-animated">
