added content to keyfigurator blurb

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 										<div class="category">Content</div>
 										<h4>Keyfigurator</h4>
 										<p>
-											<strong>Tech used: Javascript, Tailwind, Node.js & Express.js</strong>
+											<strong>Tech used: Javascript, Tailwind, MongoDB, Node.js & Express.js</strong>
 										</p>
 										<p>
 											I enjoy collecting mechanical keyboards. When it comes to the outward appearance of these keyboards, I have to choose a keyboard case color and the keycap colors/design. To make it easier to visualize what these color combinations might look like before I commit to buying them, I set out to create this visualizer tool. 
