download VC > download resume

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 				<div class="logo hover-masks-logo">
 					<a href="#">
 						<span class="mask-lnk">erik <strong>opinaldo</strong></span>
-						<span class="mask-lnk mask-lnk-hover">Download <strong>CV</strong></span>
+						<span class="mask-lnk mask-lnk-hover">Download <strong>resume</strong></span>
 					</a>
 				</div>
 
