added email address icon

--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
 		<!-- Footer -->
 		<footer class="footer">
 			<div class="copy">
-				<p>E: erikopinaldo@gmail.com</p>
+				<p><span class="icon fa fa-envelope"></span> erikopinaldo@gmail.com</p>
 			</div>
 			<div class="soc-box">
 				<div class="follow-label">Follow Me</div>
