--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	<link rel="stylesheet" href="css/jarallax.css" />
 	<link rel="stylesheet" href="css/swiper.css" />
 	<link rel="stylesheet" href="css/fontawesome.css" />
+	<link rel="stylesheet" href="path/to/font-mfizz/font-mfizz.css">
 	<link rel="stylesheet" href="css/brands.css" />
 	<link rel="stylesheet" href="css/solid.css" />
 
