switched skills section to use mfizz icons

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<link rel="stylesheet" href="css/jarallax.css" />
 	<link rel="stylesheet" href="css/swiper.css" />
 	<link rel="stylesheet" href="css/fontawesome.css" />
-	<link rel="stylesheet" href="path/to/font-mfizz/font-mfizz.css">
+	<link rel="stylesheet" href="css/font-mfizz/font-mfizz.css">
 	<link rel="stylesheet" href="css/brands.css" />
 	<link rel="stylesheet" href="css/solid.css" />
 
@@ -198,19 +198,22 @@
 					<div class="skills list content-box">
 						<ul>
 							<li>
-								<span class="icon fab fa-js" style="font-size: 2rem;"></span>
+								<i class="icon-javascript-alt" style="font-size: 2rem;"></i>
 							</li>
 							<li>
-								<span class="icon fab fa-css3" style="font-size: 2rem;"></span>
+								<i class="icon-css3" style="font-size: 2rem;"></i>
 							</li>
 							<li>
-								<span class="icon fab fa-html5" style="font-size: 2rem;"></span>
+								<i class="icon-html5-alt" style="font-size: 2rem;"></i>
 							</li>
 							<li>
-								<span class="icon fab fa-react" style="font-size: 2rem;"></span>
+								<i class="icon-reactjs" style="font-size: 2rem;"></i>
 							</li>
 							<li>
-								<span class="icon fab fa-node-js" style="font-size: 2rem;"></span>
+								<i class="icon-nodejs" style="font-size: 2rem;"></i>
+							</li>
+							<li>
+								<i class="icon-mongodb" style="font-size: 2rem;"></i>
 							</li>
 						</ul>
 					</div>
