intial skills tooltips

--- a/index.html
+++ b/index.html
@@ -198,22 +198,34 @@
 					<div class="skills list content-box">
 						<ul>
 							<li>
-								<i class="icon-javascript-alt" style="font-size: 2rem;"></i>
+								<i class="icon-javascript-alt tooltip" style="font-size: 2rem;">
+									<span class="tooltiptext" style="font-size: 1rem;">Javascript</span>
+								</i>
 							</li>
 							<li>
-								<i class="icon-css3" style="font-size: 2rem;"></i>
+								<i class="icon-css3 tooltip" style="font-size: 2rem;">
+									<span class="tooltiptext" style="font-size: 1rem;">CSS</span>
+								</i>
 							</li>
 							<li>
-								<i class="icon-html5-alt" style="font-size: 2rem;"></i>
+								<i class="icon-html5-alt tooltip" style="font-size: 2rem;">
+									<span class="tooltiptext" style="font-size: 1rem;">HTML</span>
+								</i>
 							</li>
 							<li>
-								<i class="icon-reactjs" style="font-size: 2rem;"></i>
+								<i class="icon-reactjs tooltip" style="font-size: 2rem;">
+									<span class="tooltiptext" style="font-size: 1rem;">React</span>
+								</i>
 							</li>
 							<li>
-								<i class="icon-nodejs" style="font-size: 2rem;"></i>
+								<i class="icon-nodejs tooltip" style="font-size: 2rem;">
+									<span class="tooltiptext" style="font-size: 1rem;">Node.js</span>
+								</i>
 							</li>
 							<li>
-								<i class="icon-mongodb" style="font-size: 2rem;"></i>
+								<i class="icon-mongodb tooltip" style="font-size: 2rem;">
+									<span class="tooltiptext" style="font-size: 1rem;">Javascript</span>
+								</i>
 							</li>
 						</ul>
 					</div>
