--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 					</div>
 
 					<!-- skills -->
-					<div class="skills list content-box">
+					<div class="skills list">
 						<ul>
 							<li>
 								<i class="icon-javascript-alt tooltip" style="font-size: 2rem;">
