initial skills hover zoom

--- a/index.html
+++ b/index.html
@@ -198,33 +198,33 @@
 					<div class="skills list">
 						<ul>
 							<li>
-								<i class="icon-javascript-alt tooltip" style="font-size: 2rem;">
-									<span class="tooltiptext" style="font-size: 1rem;">Javascript</span>
+								<i class="icon-javascript-alt tooltip zoom" style="font-size: 2rem;">
+									<span class="tooltiptext" style="font-size: 0.9rem;">Javascript</span>
 								</i>
 							</li>
 							<li>
-								<i class="icon-css3 tooltip" style="font-size: 2rem;">
-									<span class="tooltiptext" style="font-size: 1rem;">CSS</span>
+								<i class="icon-css3 tooltip zoom" style="font-size: 2rem;">
+									<span class="tooltiptext" style="font-size: 0.9rem;">CSS</span>
 								</i>
 							</li>
 							<li>
-								<i class="icon-html5-alt tooltip" style="font-size: 2rem;">
-									<span class="tooltiptext" style="font-size: 1rem;">HTML</span>
+								<i class="icon-html5-alt tooltip zoom" style="font-size: 2rem;">
+									<span class="tooltiptext" style="font-size: 0.9rem;">HTML</span>
 								</i>
 							</li>
 							<li>
-								<i class="icon-reactjs tooltip" style="font-size: 2rem;">
-									<span class="tooltiptext" style="font-size: 1rem;">React</span>
+								<i class="icon-reactjs tooltip zoom" style="font-size: 2rem;">
+									<span class="tooltiptext" style="font-size: 0.9rem;">React</span>
 								</i>
 							</li>
 							<li>
-								<i class="icon-nodejs tooltip" style="font-size: 2rem;">
-									<span class="tooltiptext" style="font-size: 1rem;">Node.js</span>
+								<i class="icon-nodejs tooltip zoom" style="font-size: 2rem;">
+									<span class="tooltiptext" style="font-size: 0.9rem;">Node.js</span>
 								</i>
 							</li>
 							<li>
-								<i class="icon-mongodb tooltip" style="font-size: 2rem;">
-									<span class="tooltiptext" style="font-size: 1rem;">Javascript</span>
+								<i class="icon-mongodb tooltip zoom" style="font-size: 2rem;">
+									<span class="tooltiptext" style="font-size: 0.9rem;">MongoDB</span>
 								</i>
 							</li>
 						</ul>
