override i tag font-style to remove italics

--- a/index.html
+++ b/index.html
@@ -198,32 +198,32 @@
 					<div class="skills list content-box">
 						<ul>
 							<li>
-								<i class="icon-javascript-alt tooltip zoom" style="font-size: 2rem;">
+								<i class="icon-javascript-alt tooltip zoom" style="font-size: 2rem; font-style: normal;">
 									<span class="tooltiptext" style="font-size: 0.8rem;">Javascript</span>
 								</i>
 							</li>
 							<li>
-								<i class="icon-css3 tooltip zoom" style="font-size: 2rem;">
+								<i class="icon-css3 tooltip zoom" style="font-size: 2rem; font-style: normal;">
 									<span class="tooltiptext" style="font-size: 0.8rem;">CSS</span>
 								</i>
 							</li>
 							<li>
-								<i class="icon-html5-alt tooltip zoom" style="font-size: 2rem;">
+								<i class="icon-html5-alt tooltip zoom" style="font-size: 2rem; font-style: normal;">
 									<span class="tooltiptext" style="font-size: 0.8rem;">HTML</span>
 								</i>
 							</li>
 							<li>
-								<i class="icon-reactjs tooltip zoom" style="font-size: 2rem;">
+								<i class="icon-reactjs tooltip zoom" style="font-size: 2rem; font-style: normal;">
 									<span class="tooltiptext" style="font-size: 0.8rem;">React</span>
 								</i>
 							</li>
 							<li>
-								<i class="icon-nodejs tooltip zoom" style="font-size: 2rem;">
+								<i class="icon-nodejs tooltip zoom" style="font-size: 2rem; font-style: normal;">
 									<span class="tooltiptext" style="font-size: 0.8rem;">Node.js</span>
 								</i>
 							</li>
 							<li>
-								<i class="icon-mongodb tooltip zoom" style="font-size: 2rem;">
+								<i class="icon-mongodb tooltip zoom" style="font-size: 2rem; font-style: normal;">
 									<span class="tooltiptext" style="font-size: 0.8rem;">MongoDB</span>
 								</i>
 							</li>
