removed resume link target

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 							I now combine this strong desire to create meaningful experiences and my innate creative passion to build software that hits the mark.
 						</p>
 						<div class="bts">
-							<a target="_blank" href="/Resume" download="ErikOpinaldo-Resume.pdf" class="btn hover-animated">
+							<a href="/Resume" download="ErikOpinaldo-Resume.pdf" class="btn hover-animated">
 								<span class="circle"></span>
 								<span class="lnk">Download resume</span>
 							</a>
