initial simplified splash

--- a/index.html
+++ b/index.html
@@ -132,14 +132,14 @@
 					<div class="vertical-center">
 						<div class="started-content">
 							<h1 class="h-title">
-								Hello, I'm <strong>Erik Opinaldo</strong>, a full-stack developer based in Toronto, Canada.
+								<strong>Full-stack developer</strong> based in Toronto, Canada.
 							</h1>
-							<div class="h-subtitle typing-subtitle">
+							<!-- <div class="h-subtitle typing-subtitle">
 								<p>I make cool <strong>websites</strong></p>
 								<p>I develop <strong>solutions</strong></p>
 								<p>I love <strong>challenge</strong></p>
-							</div>
-							<span class="typed-subtitle"></span>
+							</div> -->
+							<span class="typed-subtitle"><strong>erik</strong>opinaldo</span>
 						</div>
 					</div>
 				</div>
@@ -435,7 +435,7 @@
 	<script src="js/jquery.validate.js"></script>
 	<script src="js/magnific-popup.js"></script>
 	<script src="js/simpleParallax.js"></script>
-	<script src="js/typed.js"></script>
+	<!-- <script src="js/typed.js"></script> -->
 	<script src="js/jarallax.js"></script>
 	<script src="js/jarallax-video.js"></script>
 	<script src="js/jarallax-element.js"></script>
