--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 			<div class="section started" id="section-started">
 
 				<!-- background -->
-				<div class="video-bg jarallax" style="background-image: url(images/splash.png);">
+				<div class="video-bg jarallax" style="background-image: url(images/splash2.jpg);">
 					<div class="video-bg-mask"></div>
 					<div class="video-bg-texture" id="grained_container"></div>
 				</div>
@@ -160,9 +160,9 @@
 				<div class="content content-box">
 
 					<!-- image -->
-					<div class="image">
+					<!-- <div class="image">
 						<img src="images/erik-profile.jpg" alt="" style="border-radius: 50%;"/>
-					</div>
+					</div> -->
 
 					<!-- desc -->
 					<div class="desc">
@@ -442,7 +442,7 @@
 	<script src="js/imagesloaded.pkgd.js"></script>
 	<script src="js/isotope.pkgd.js"></script>
 	<script src="js/swiper.js"></script>
-	<script src="js/grained.js"></script>
+	<!-- <script src="js/grained.js"></script> -->
 
 	<script src="js/scripts.js"></script>
 
