--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 				<!-- background -->
 				<div class="video-bg jarallax" style="background-image: url(images/splash2.jpg);">
 					<div class="video-bg-mask"></div>
-					<div class="video-bg-texture" id="grained_container"></div>
+					<!-- <div class="video-bg-texture" id="grained_container"></div> -->
 				</div>
 
 				<!-- started content -->
@@ -442,7 +442,7 @@
 	<script src="js/imagesloaded.pkgd.js"></script>
 	<script src="js/isotope.pkgd.js"></script>
 	<script src="js/swiper.js"></script>
-	<!-- <script src="js/grained.js"></script> -->
+	<script src="js/grained.js"></script>
 
 	<script src="js/scripts.js"></script>
 
