main title responsive layouts

--- a/index.html
+++ b/index.html
@@ -131,15 +131,17 @@
 				<div class="centrize full-width">
 					<div class="vertical-center">
 						<div class="started-content">
-							<h1 class="h-title">
-								<strong>Full-stack developer</strong> based in Toronto, Canada.
-							</h1>
+							<div class="main-title">
+								<h1><strong>erik</strong>opinaldo</h1>
+								<h2>
+									<strong>Full-stack developer</strong> based in Toronto, Canada.
+								</h2>
+							</div>
 							<!-- <div class="h-subtitle typing-subtitle">
 								<p>I make cool <strong>websites</strong></p>
 								<p>I develop <strong>solutions</strong></p>
 								<p>I love <strong>challenge</strong></p>
 							</div> -->
-							<span class="typed-subtitle"><strong>erik</strong>opinaldo</span>
 						</div>
 					</div>
 				</div>
