brought back logo

--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
 				<a href="#" class="menu-btn"><span></span></a>
 
 				<!-- logo -->
-				<!-- <div class="logo hover-masks-logo">
+				<div class="logo hover-masks-logo">
 					<a href="#">
 						<span class="mask-lnk">erik <strong>opinaldo</strong></span>
 						<span class="mask-lnk mask-lnk-hover">Download <strong>resume</strong></span>
 					</a>
-				</div> -->
+				</div>
 
 				<!-- top menu -->
 				<div class="top-menu hover-masks">
