--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
 				<!-- logo -->
 				<div class="logo hover-masks-logo">
-					<a href="#">
+					<a href="images/ErikOpinaldo-Resume.pdf" download>
 						<span class="mask-lnk">erik <strong>opinaldo</strong></span>
 						<span class="mask-lnk mask-lnk-hover">Download <strong>resume</strong></span>
 					</a>
