updated page title to include full stack developer

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta name="author" content="erikopinaldo" />
 
 	<!-- Title -->
-	<title>erikopinaldo</title>
+	<title>erikopinaldo | full-stack developer</title>
 
 	<!-- Fonts -->
 	<link
